Fixed routing issue and added edunet project.

--- a/authz_api/src/main/resources/application.yml
+++ b/authz_api/src/main/resources/application.yml
@@ -18,3 +18,15 @@ logging:
     org:
       springframework:
         security: DEBUG
+        web:  DEBUG
+---
+spring:
+    profiles: default
+    
+---
+spring:
+    profiles: dev
+    
+---
+spring:
+    profiles: heroku
