--- a/authz/src/main/resources/application.yml
+++ b/authz/src/main/resources/application.yml
@@ -68,7 +68,7 @@ spring:
     #password: ${JDBC_DATABASE_PASSWORD}   
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     showSql: true 
   queries:
     users-query: select username, password, enabled from users where username=?
